--- a/Section-05-Modern-Js-React/Week-08/06-12-2023/p-06-todo-app-with-context-api/.vscode/settings.json
+++ b/Section-05-Modern-Js-React/Week-08/06-12-2023/p-06-todo-app-with-context-api/.vscode/settings.json
@@ -5,10 +5,7 @@
         "**/.hg": true,
         "**/CVS": true,
         "**/.DS_Store": true,
-        "**/Thumbs.db": true,
-        "[!s]*/**": true,
-        "s[!r]*/**": true,
-        "sr[!c]*/**": true
+        "**/Thumbs.db": true
     },
     "workbench.colorCustomizations": {
         "activityBar.activeBackground": "#fa1b49",
