--- a/Section-07-OOP/Week-09/17-12-2023/P06-Static/P06-Static.csproj
+++ b/Section-07-OOP/Week-09/17-12-2023/P06-Static/P06-Static.csproj
@@ -8,4 +8,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Helper\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Helper\" />
+  </ItemGroup>
 </Project>
