--- a/Section-10-API/Week-16/01-02-2024/MiniShop/MiniShop.Shared/MiniShop.Shared.csproj
+++ b/Section-10-API/Week-16/01-02-2024/MiniShop/MiniShop.Shared/MiniShop.Shared.csproj
@@ -6,4 +6,8 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App"/>
+  </ItemGroup>
+
 </Project>
