--- a/Section-10-API/Week-16/03-02-2024/MiniShopUI/.vscode/settings.json
+++ b/Section-10-API/Week-16/03-02-2024/MiniShopUI/.vscode/settings.json
@@ -25,6 +25,16 @@
         "**/.hg": true,
         "**/CVS": true,
         "**/.DS_Store": true,
-        "**/Thumbs.db": true
+        "**/Thumbs.db": true,
+        "[!A]*/**": true,
+        "A[!r]*/**": true,
+        "Ar[!e]*/**": true,
+        "Are[!a]*/**": true,
+        "Area[!s]*/**": true,
+        "Areas/[!A]*/**": true,
+        "Areas/A[!d]*/**": true,
+        "Areas/Ad[!m]*/**": true,
+        "Areas/Adm[!i]*/**": true,
+        "Areas/Admi[!n]*/**": true
     }
 }
