Kategori oluşturma kısmı resim ile birlikte oluşturuldu. kategoriler için Edit ve delete kaldı.

--- a/Section-10-API/Week-16/03-02-2024/MiniShopUI/Properties/launchSettings.json
+++ b/Section-10-API/Week-16/03-02-2024/MiniShopUI/Properties/launchSettings.json
@@ -3,10 +3,10 @@
     "MiniShop.MVC": {
       "commandName": "Project",
       "launchBrowser": true,
+      "applicationUrl": "https://localhost:59079;http://localhost:59080",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "applicationUrl": "https://localhost:59079;http://localhost:59080"
+      }
     }
   }
 }
