--- a/Section-11-Identity/Week-19/21-02-2024/MiniShop/MiniShop.UI/MiniShop.UI.csproj
+++ b/Section-11-Identity/Week-19/21-02-2024/MiniShop/MiniShop.UI/MiniShop.UI.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="Iyzipay" Version="2.1.61" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.15">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
