email confirmation islemi devam ediyor. action olusturuldu token olusturuldu mail servisi olusturuldu.

--- a/Section-11-Identity/Week-20/29-02-2024/MiniShop/MiniShop.UI/appsettings.json
+++ b/Section-11-Identity/Week-20/29-02-2024/MiniShop/MiniShop.UI/appsettings.json
@@ -9,5 +9,12 @@
   "ConnectionStrings": {
     "SqlServerConnection": "SqlServer için connectionString'imizi buraya yazıcaz.",
     "SqliteConnection": "Data Source=MiniShop.sqlite"
+  },
+  "EmailSender": {
+    "Host": "smtp.office365.com",
+    "Port": 587,
+    "EnableSSL": true,
+    "UserName": "kullaniciadi",
+    "Password": "parola"
   }
 }
