--- a/Section-11-Identity/Week-20/29-02-2024/MiniShop/MiniShop.UI/Properties/launchSettings.json
+++ b/Section-11-Identity/Week-20/29-02-2024/MiniShop/MiniShop.UI/Properties/launchSettings.json
@@ -6,7 +6,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:59079;http://localhost:59080"
+      "applicationUrl": "https://localhost:59079;"
     }
   }
 }
