Mail gonderme ve confirm etme islemi OK

--- a/Section-11-Identity/Week-20/29-02-2024/MiniShop/MiniShop.UI/appsettings.json
+++ b/Section-11-Identity/Week-20/29-02-2024/MiniShop/MiniShop.UI/appsettings.json
@@ -14,7 +14,7 @@
     "Host": "smtp.office365.com",
     "Port": 587,
     "EnableSSL": true,
-    "UserName": "kullaniciadi",
-    "Password": "parola"
+    "UserName": "tascagdas2024@hotmail.com",
+    "Password": "Tascagdas260636"
   }
 }
