--- a/Section-11-Identity/Week-20/02-03-2024/MiniShop/MiniShop.UI/MiniShop.UI.csproj
+++ b/Section-11-Identity/Week-20/02-03-2024/MiniShop/MiniShop.UI/MiniShop.UI.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNetCoreHero.ToastNotification" Version="1.1.0" />
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="Iyzipay" Version="2.1.61" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.15">
