diyagram ve user secrets dosyası oluşturuldu

--- a/Section-11-Identity/Week-21/05-03-2024/MiniShop/MiniShop.Business/MiniShop.Business.csproj
+++ b/Section-11-Identity/Week-21/05-03-2024/MiniShop/MiniShop.Business/MiniShop.Business.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UserSecretsId>0ba63681-5c97-4e17-bbfa-776bfc3b5b9c</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
